src/QAbstractButton.h


// 
// This file has been automatically generated by RaQt_maker V0.0.7.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void QWQAbstractButtonsetText(void * obj, char * text);
EXTERNC void QWQAbstractButtontext(void * retBuffer, void * obj);
EXTERNC void QWQAbstractButtonsetCheckable(void * obj, int8_t  arg1);
EXTERNC int8_t QWQAbstractButtonisCheckable(void * obj);
EXTERNC int8_t QWQAbstractButtonisChecked(void * obj);
EXTERNC void QWQAbstractButtonsetDown(void * obj, int8_t  arg1);
EXTERNC int8_t QWQAbstractButtonisDown(void * obj);
EXTERNC void QWQAbstractButtonsetAutoExclusive(void * obj, int8_t  arg1);
EXTERNC void QWQAbstractButtonclick(void * obj);
EXTERNC void QWQAbstractButtontoggle(void * obj);
EXTERNC void QWQAbstractButtonsetChecked(void * obj, int8_t  arg1);